@@ -41,6 +41,7 @@ public:
 
   id_t id;
   timestamp_ns_t timestamp;
+  balance_t balance;
   price_t price;
   quantity_t quantity;
   quantity_t filled_quantity;
@@ -48,8 +49,8 @@ public:
 
   explicit LimitOrder(const id_t id, const timestamp_ns_t timestamp,
                       const price_t price, const quantity_t quantity)
-      : id(id), timestamp(timestamp), price(price), quantity(quantity),
-        filled_quantity(0), is_cancelled(false) {}
+      : id(id), timestamp(timestamp), balance(0), price(price),
+        quantity(quantity), filled_quantity(0), is_cancelled(false) {}
 };
 
 } // namespace clob
