@@ -12,7 +12,7 @@ namespace clob {
 /** Version Info **/
 constexpr uint32_t VERSION_MAJOR{0};
 constexpr uint32_t VERSION_MINOR{1};
-constexpr uint32_t VERSION_PATCH{6};
+constexpr uint32_t VERSION_PATCH{7};
 constexpr uint32_t VERSION{VERSION_MAJOR * 10000 + VERSION_MINOR * 100 +
                            VERSION_PATCH};
 } // namespace clob
